--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "firststeps": "^1.0.0",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "prettier": "^3.3.3"
   }
 }
